[package]
name = "stellar-overlay"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
stellar-xdr = { version = "25", features = ["std", "curr"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
bytes-lit = "0.0.5"
base64 = "0.22"
